s3client without transfer mgr